# qcodespp

./: .gitignore  LICENSE  README.rst  WINDOWS_INSTALL.md  __init__.py  parameters.py  pyproject.toml  qcodespp_template.ipynb
qcodesplusplus/: __init__.py  calibrations.py  dataset.py  dist.py  extensions.py  instrument.py  instrument_drivers.py  logger.py  loops.py  math_utils.py  measure.py  metdatable.py  parameters.py  plotting.py  sphinx_extensions.py  station.py  utils.py  validators.py
qcodesplusplus/data/: data_set.py  gnuplot_format.py
qcodesplusplus/instrument_drivers/QDevil/: 159fit_params_high_latest.json  159fit_params_low_latest.json  QDAC2.py  QSwitch_elab.py
qcodesplusplus/instrument_drivers/ZI/: ZIHF2LI.py  ZIMFLI.py  ZIUHFLI.py
qcodesplusplus/instrument_drivers/tektronix/: Keithley_2700.py  Keithley_6500.py
qcodesplusplus/plotting/: RemotePlot.py  RemoteQtPlotWidgets.py  analysis_tools.py
qcodesplusplus/plotting/offline/: LICENSE  README.md  convertdesign_desktop.bat  convertdesign_hplappy.bat  datatypes.py  design.py  design.ui  designV2.py  filters.py  fits.py  helpers.py  main.py  popupwindows.py  qcodes_extension.py  qcodes_pp_extension.py  qd_extension.py  sidebar1D.py  sidebars.py  zoom_factory.py
qcodesplusplus/qcpp_data/: gnuplot_format.py
qcodesplusplus/qcpp_instrument_drivers/: instrument_mocks.py
qcodesplusplus/qcpp_instrument_drivers/ZI/: ZIHF2LI.py
qcodesplusplus/qcpp_instrument_drivers/tektronix/: Keithley_2000_Scan.py
qcodesplusplus/qcpp_plotting/: RemotePlot.py
qcodesplusplus/qcpp_plotting/offline/: convertdesign_desktop.bat  datatypes.py  design.py  design.ui  fits.py  helpers.py  main.py  popupwindows.py  qcodes_pp_extension.py  sidebars.py  zoom_factory.py
qcodesplusplus/utils/: visa_helpers.py
qcodespp/: __init__.py  actions.py  cli.py  loops.py  measure.py  parameters.py  station.py  version.py
qcodespp/data/: data_array.py  data_set.py  format.py  gnuplot_format.py  hdf5_format.py  hdf5_format_hickle.py  io.py  location.py
qcodespp/instrument_drivers/: instrument_mocks.py  multiplexer_instrument.py
qcodespp/instrument_drivers/Hioki/: Hioki_DM7275.py
qcodespp/plotting/: RemotePlot.py  RemotePlotClient.py  RemoteQtPlotWidgets.py  analysis_tools.py  matplotlib_tools.py
qcodespp/scripts/: README.md  build_executable.py  qcodespp-offline-plotting.bat  qcodespp-offline-plotting.ps1  setup_windows.py  windows_setup_helper.py
qcodespp/utils/: helpers.py  visa_helpers.py
scripts/: README.md  qcodespp_gui_launcher.py  setup_windows.py  windows_setup_helper.py
(+51 files in other folders)
