[build-system]
requires = ["flit_core >=3.2,<4"]

build-backend = 'flit_core.buildapi'

[project]
name = "qcodespp"
version = '0.1.11'
maintainers = [{name = "Damon Carrad", email = "damonc@dtu.dk"}]
description = "Package providing additional functions for QCoDeS"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [ 
    "qcodes>=0.53",
    'numpy>=2.2.0',
    'pyqtgraph',
    'matplotlib',
    'PyQt5',
    'ipykernel',
    'jupyter',
    'pyvisa',
    'h5py>=2.6',
    'websockets>=3.2',
    'jsonschema',
    'pyzmq',
    'wrapt',
    'pyserial',
    'pandas',
    'tqdm',
    'scipy',
    'lmfit'
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.urls]
Homepage = "https://github.com/qcodespp/qcodespp"

[project.scripts]
qcodespp = "qcodespp.cli:main"

[tool.flit.sdist]
include = ["scripts/"]
